ui: Layout Fixes
Refactor z-indexes of all elements with z-indexes so that there are no
more unexpected overlaps. All z-indexes are set via variable, with all
variables in a single file for easy vertical sorting.

Fixes #12717

Add an "unbounded_column" element class for table columns that may
contain strings of unbounded length in cells. This is intended for
things like table names and node addresses, which will be a single
"word" with no whitespace but may be of unbounded length. The fix is to
allow these columns to "break" the contained text and wrap.

As a related fix, movs the "status" icon in the node address column of
the nodes list in front of the address string (previously it followed
the address string.)

Fixes #13945
Fixes #14772

--- a/pkg/ui/styl/components/table.styl
+++ b/pkg/ui/styl/components/table.styl
@@ -91,3 +91,7 @@ $stats-table-tr--bg-alt = $secondary-gray-7
       text-decoration none
       width 100%
       height 100%
+
+  &__unbounded-column
+    whitespace normal
+    word-break break-all
