--- a/pkg/ui/styl/layout/layout.styl
+++ b/pkg/ui/styl/layout/layout.styl
@@ -39,7 +39,7 @@ $subnav-background  = $secondary-gray-4
   padding-top 12px
   padding-bottom 12px
   padding-left 24px
-  z-index 2
+  z-index $z-index-page-config
   position relative
 
   &--fixed
@@ -153,7 +153,7 @@ span.icon
   position absolute
   top 0
   right 0
-  z-index 1
+  z-index $z-index-page-config
 
   h2
     font-size 3rem
