--- a/pkg/ui/styl/layout/navigation-bar.styl
+++ b/pkg/ui/styl/layout/navigation-bar.styl
@@ -36,7 +36,7 @@ $subnav-underline-height = 3px
   left 0
   bottom 0
   min-height 350px
-  z-index 1
+  z-index $z-index-navigation
   width $nav-width
   modular-font-size '1'
   background-color $navbar-bg
@@ -109,7 +109,7 @@ $subnav-underline-height = 3px
   top $top-bar-height
   right 0
   width 100%
-  z-index 1
+  z-index $z-index-navigation
 
   ul.nav
     display flex
